--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Alice&display=swap" rel="stylesheet">
-  
+
 </head>
 <body>
   <div id="page">
@@ -58,5 +58,9 @@
       </section>
     </main>
   </div>
+
+  <footer>
+    Feito com <img src="assets/heart.svg" alt="ícone de coração"> pela Rocketseat
+  </footer>
 </body>
 </html>
